[gd_scene load_steps=3 format=3 uid="uid://dos8owemd38x"]

[ext_resource type="Script" path="res://Max/components/MoveAtTargetComponent.gd" id="1_1p20x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0d6oc"]
radius = 100.0

[node name="MoveAtTargetComponent" type="Area2D"]
disable_mode = 2
collision_layer = 0
collision_mask = 2
script = ExtResource("1_1p20x")
enemy_radius = 50.0

[node name="VisionCircleShape1" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0d6oc")

[node name="FireRateTimer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
